collapsible z-index fix

--- a/hubgrep/static/scss/components/_collapsible.scss
+++ b/hubgrep/static/scss/components/_collapsible.scss
@@ -13,6 +13,7 @@
       box-shadow: 1px 1px 3px color(boxShadow);
       background-color: color(white);
       position: absolute;
+      z-index: 1;
     }
   }
 
